tests/explicit-nulls/neg/notnull/NotNull.java
package notnull;

import java.lang.annotation.*;

// A NotNull Annotation not in the list
@Retention(value = RetentionPolicy.RUNTIME)
public @interface NotNull {
}
